--- a/01-Introduccion_Programacion_Web_ASPNET_Core/Section01/Properties/launchSettings.json
+++ b/01-Introduccion_Programacion_Web_ASPNET_Core/Section01/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Seccion01": {
+    "Section01": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
