Add Renderizar listado de especialidades

--- a/02-Introduccion_Manejo_Bases_Datos/Section02/appsettings.Development.json
+++ b/02-Introduccion_Manejo_Bases_Datos/Section02/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "BDHospital": "Data Source=localhost, 1433;Initial Catalog=BDHospital;Integrated Security=True;TrustServerCertificate=True"
     }
-  }
 }
