--- a/02-Introduccion_Manejo_Bases_Datos/Section02/appsettings.json
+++ b/02-Introduccion_Manejo_Bases_Datos/Section02/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DBHospital": "Data Source=localhost, 1433;Initial Catalog=BDHospital;Integrated Security=True;TrustServerCertificate=True"
+        "BDHospital": "Data Source=localhost, 1433;Initial Catalog=BDHospital;Integrated Security=True;TrustServerCertificate=True"
     }
 }
