--- a/03-Uso_de_filtros/Section03/appsettings.json
+++ b/03-Uso_de_filtros/Section03/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "BDHospital": "Data Source=localhost, 1433;Initial Catalog=BDHospital;Integrated Security=True;TrustServerCertificate=True"
+        "BDHospital": "Data Source=LAPTOP-FERRER\\SQLEXPRESS;Initial Catalog=BDHospital;Persist Security Info=True;User ID=SA;Password=P@ssw0rd;Integrated Security=True;TrustServerCertificate=True"
     }
 }
